feat: implement mobile checkout flow and server-side order processing with related schema, routing, and localization updates.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -73,6 +73,7 @@
   "home.viewAll": "Alle anzeigen",
   "home.search.placeholder": "Nach Premium-Produkten suchen...",
   "home.noProducts": "Keine Produkte gefunden",
+  "home.category.default": "KOLLEKTION",
   "category.all": "Alle",
   "category.electronics": "Elektronik",
   "category.fashion": "Mode",
@@ -128,6 +129,12 @@
   "favorites.empty.subtitle": "Beginnen Sie zu stöbern und fügen Sie Artikel zu Ihrer Wunschliste hinzu.",
   "favorites.startExploring": "Entdecken starten",
   "favorites.itemsCount": "{count} Artikel in der Wunschliste",
+  "product.itemInCart": "{count} im Warenkorb",
+  "product.badge.shipping.title": "Gratis 2-Tage",
+  "product.badge.shipping.sub": "Versand",
+  "product.badge.warranty.title": "Lebenslange",
+  "product.badge.warranty.sub": "Garantie",
+  "product.details.defaultDescription": "Gefertigt aus hochwertigen Materialien mit einem edlen Finish.",
   "admin.console.title": "Admin-Konsole",
   "admin.console.overview": "Store-Übersicht • Live",
   "admin.management": "Verwaltung",
@@ -227,5 +234,47 @@
   "profile.avatar.permissionDenied": "Kamera-/Galerie-Berechtigung verweigert",
   "profile.avatar.pickError": "Fehler bei der Bildauswahl",
   "profile.myAddresses.sub": "Verwalten Sie Ihre Adressen",
-  "profile.avatar.invalidType": "Nur Bilddateien (jpeg, jpg, png, gif, webp) sind erlaubt"
+  "profile.avatar.invalidType": "Nur Bilddateien (jpeg, jpg, png, gif, webp) sind erlaubt",
+  "auth.error.invalidCredentials": "Ungültige Anmeldedaten",
+  "cart.item.defaultName": "Produkt",
+  "cart.item.size": "Größe",
+  "cart.item.color": "Farbe",
+  "checkout.steps.shipping": "VERSAND",
+  "checkout.steps.payment": "ZAHLUNG",
+  "checkout.steps.review": "ÜBERSICHT",
+  "checkout.title.step1": "Checkout",
+  "checkout.title.step2": "Zahlungsinformationen",
+  "checkout.title.step3": "Bestellübersicht",
+  "checkout.shipping.address": "LIEFERADRESSE",
+  "checkout.shipping.method": "VERSANDART",
+  "checkout.shipping.addAddress": "Lieferadresse hinzufügen",
+  "checkout.shipping.priority": "Priority Express",
+  "checkout.shipping.standard": "Standardversand",
+  "checkout.shipping.days.priority": "1-2 Werktage",
+  "checkout.shipping.days.standard": "3-5 Wer Werktage",
+  "checkout.footer.orderTotal": "Bestellsumme",
+  "checkout.footer.includingTaxes": "INKLUSIVE STEUERN",
+  "checkout.button.placeOrder": "Zahlungspflichtig bestellen",
+  "checkout.payment.creditCard": "KREDITKARTE",
+  "checkout.payment.cardNumber": "KARTENNUMMER",
+  "checkout.payment.expiryDate": "ABLAUFDATUM",
+  "checkout.payment.cvv": "CVV",
+  "checkout.payment.saveCard": "Kartendaten für zukünftige Einkäufe speichern",
+  "checkout.payment.otherMethods": "ANDERE METHODEN",
+  "checkout.payment.paypal.desc": "SICHERE & EINFACHE ZAHLUNG",
+  "checkout.payment.klarna.desc": "IN RATEN ZAHLEN",
+  "checkout.payment.continueToReview": "Weiter zur Übersicht",
+  "checkout.review.deliverTo": "LIEFERUNG AN",
+  "checkout.review.payment": "ZAHLUNG",
+  "checkout.review.orderSummary": "BESTELLÜBERSICHT",
+  "checkout.review.items": "Artikel",
+  "checkout.review.estimatedTaxes": "Geschätzte Steuern",
+  "checkout.review.placingOrder": "Bestellung wird aufgegeben...",
+  "checkout.success.title": "Vielen Dank!",
+  "checkout.success.subtitle": "Ihre Bestellung wurde erfolgreich aufgegeben.",
+  "checkout.success.orderNumber": "BESTELLNUMMER",
+  "checkout.success.deliveryEstimated": "VORAUSSICHTLICHE LIEFERUNG",
+  "checkout.success.confirmationSent": "Bestätigung wurde an {email} gesendet",
+  "checkout.success.trackOrder": "Bestellung verfolgen",
+  "checkout.success.continueShopping": "Weiter einkaufen"
 }
