--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -39,68 +39,7 @@
   "auth.error.input": "Input Error",
   "home.search.placeholder": "Search for premium products...",
   "home.noProducts": "No products found",
-  "product.details.back": "Go Back",
-  "product.details.price": "Price",
-  "product.details.addToCart": "Add to Cart",
-  "product.details.outOfStock": "Out of Stock",
-  "product.stock.available": "Stock: {count} left",
-  "cart.title": "Your Cart",
-  "cart.empty.title": "Your Cart is Empty",
-  "cart.empty.subtitle": "Looks like you haven't added anything to your cart yet.",
-  "cart.startShopping": "Start Shopping",
-  "cart.total": "Total",
-  "cart.subtotal": "Subtotal",
-  "cart.checkout": "Proceed to Checkout",
-  "profile.title": "Profile",
-  "profile.loginRequired": "Please login to see your profile",
-  "profile.general": "General",
-  "profile.orders": "My Orders",
-  "profile.payments": "Payment Methods",
-  "profile.settings": "Settings",
-  "profile.admin": "Admin Panel",
-  "profile.signOut": "Sign Out",
-  "profile.logout.error": "Logout failed. Please try again.",
-  "admin.dashboard.title": "Admin Dashboard",
-  "admin.delete.title": "Delete Product",
-  "admin.delete.confirm": "Are you sure you want to delete this product?",
-  "admin.manage.title.add": "Add New Product",
-  "admin.manage.title.edit": "Edit Product",
-  "admin.manage.name": "Product Name",
-  "admin.manage.description": "Description",
-  "admin.manage.price": "Price",
-  "admin.manage.category": "Category",
-  "admin.manage.imageUrl": "Image URL",
-  "admin.manage.stock": "Stock",
-  "admin.manage.update": "Update Product",
-  "admin.manage.create": "Create Product",
-  "account.title": "Account",
-  "account.security": "Security",
-  "account.biometric": "Biometric Login (FaceID)",
-  "account.changePassword": "Change Password",
-  "account.personalData": "Personal Data",
-  "account.editProfile": "Edit Profile",
-  "account.paymentMethods": "Payment Methods",
-  "account.orderHistory": "Order History",
-  "account.dangerZone": "Danger Zone",
-  "account.deleteAccount": "Delete Account",
-  "account.biometric.success.title": "FaceID Active",
-  "account.biometric.success.message": "Biometric login has been successfully enabled. You no longer need to enter a password!",
-  "account.biometric.error.title": "Error",
-  "account.biometric.error.message": "Incorrect password. Please try again.",
-  "settings.title": "Settings",
-  "settings.notifications": "Notifications",
-  "settings.theme": "Theme",
-  "settings.language": "Language",
-  "settings.defaultView": "Default View",
-  "settings.legal.imprint": "Imprint",
-  "settings.legal.accessibility": "Accessibility",
-  "settings.legal.tracking": "Tracking Info",
-  "settings.legal.privacy": "Privacy Policy",
-  "settings.theme.choose": "Choose Theme",
-  "settings.theme.light": "Light",
-  "settings.theme.dark": "Dark",
-  "settings.theme.system": "System",
-  "settings.language.choose": "Choose Language",
+  "home.category.default": "COLLECTION",
   "home.loginRequired.title": "Login Required",
   "home.loginRequired.message": "Please login to add to wishlist",
   "home.newBadge": "NEW",
@@ -148,6 +87,13 @@
   "favorites.empty.subtitle": "Start exploring and add items to your wishlist.",
   "favorites.startExploring": "Start Exploring",
   "favorites.itemsCount": "{count} Items in Wishlist",
+  "product.itemInCart": "{count} in Cart",
+  "product.badge.shipping.title": "Free 2-Day",
+  "product.badge.shipping.sub": "Shipping",
+  "product.badge.warranty.title": "Lifetime",
+  "product.badge.warranty.sub": "Warranty",
+  "product.details.defaultDescription": "Crafted from premium materials with a deep finish. This structured silhouette offers a modern take on classic design.",
+  "admin.console.title": "Admin Console",
   "forgotPassword.title": "Forgot Password?",
   "forgotPassword.subtitle": "Enter your email and we'll send you a code to reset your password",
   "forgotPassword.emailLabel": "Email Address",
@@ -233,5 +179,47 @@
   "profile.avatar.permissionDenied": "Camera/Gallery permission denied",
   "profile.avatar.pickError": "Error selecting image",
   "profile.myAddresses.sub": "Manage your addresses",
-  "profile.avatar.invalidType": "Only image files (jpeg, jpg, png, gif, webp) are allowed"
+  "profile.avatar.invalidType": "Only image files (jpeg, jpg, png, gif, webp) are allowed",
+  "auth.error.invalidCredentials": "Invalid credentials",
+  "cart.item.defaultName": "Product",
+  "cart.item.size": "Size",
+  "cart.item.color": "Color",
+  "checkout.steps.shipping": "SHIPPING",
+  "checkout.steps.payment": "PAYMENT",
+  "checkout.steps.review": "REVIEW",
+  "checkout.title.step1": "Checkout",
+  "checkout.title.step2": "Payment Details",
+  "checkout.title.step3": "Order Review",
+  "checkout.shipping.address": "SHIPPING ADDRESS",
+  "checkout.shipping.method": "SHIPPING METHOD",
+  "checkout.shipping.addAddress": "Add Shipping Address",
+  "checkout.shipping.priority": "Priority Express",
+  "checkout.shipping.standard": "Standard Delivery",
+  "checkout.shipping.days.priority": "1-2 business days",
+  "checkout.shipping.days.standard": "3-5 business days",
+  "checkout.footer.orderTotal": "Order Total",
+  "checkout.footer.includingTaxes": "INCLUDING TAXES",
+  "checkout.button.placeOrder": "Place Order",
+  "checkout.payment.creditCard": "CREDIT CARD",
+  "checkout.payment.cardNumber": "CARD NUMBER",
+  "checkout.payment.expiryDate": "EXPIRY DATE",
+  "checkout.payment.cvv": "CVV",
+  "checkout.payment.saveCard": "Save card details for future purchases",
+  "checkout.payment.otherMethods": "OTHER METHODS",
+  "checkout.payment.paypal.desc": "SAFE & EASY PAYMENT",
+  "checkout.payment.klarna.desc": "PAY IN INSTALLMENTS",
+  "checkout.payment.continueToReview": "Continue to Review",
+  "checkout.review.deliverTo": "DELIVER TO",
+  "checkout.review.payment": "PAYMENT",
+  "checkout.review.orderSummary": "ORDER SUMMARY",
+  "checkout.review.items": "Items",
+  "checkout.review.estimatedTaxes": "Estimated Taxes",
+  "checkout.review.placingOrder": "Placing Order...",
+  "checkout.success.title": "Thank You!",
+  "checkout.success.subtitle": "Your order has been placed successfully.",
+  "checkout.success.orderNumber": "ORDER NUMBER",
+  "checkout.success.deliveryEstimated": "ESTIMATED DELIVERY",
+  "checkout.success.confirmationSent": "Confirmation sent to {email}",
+  "checkout.success.trackOrder": "Track Order",
+  "checkout.success.continueShopping": "Continue Shopping"
 }
