--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -39,6 +39,8 @@
   "auth.error.input": "Giriş Hatası",
   "home.search.placeholder": "Ürün ara...",
   "home.noProducts": "Ürün bulunamadı",
+  "home.category.default": "KOLEKSİYON",
+  "category.all": "Hepsi",
   "product.details.back": "Geri Dön",
   "product.details.price": "Fiyat",
   "product.details.addToCart": "Sepete Ekle",
@@ -107,7 +109,6 @@
   "home.catalog": "Katalog",
   "home.section.newArrivals": "Yeni Gelenler",
   "home.viewAll": "Hepsini Gör",
-  "category.all": "Tümü",
   "category.electronics": "Elektronik",
   "category.fashion": "Moda",
   "category.home": "Ev",
@@ -194,29 +195,29 @@
   "profile.saveChanges": "Değişiklikleri Kaydet",
   "profile.updateSuccess": "Profil başarıyla güncellendi",
   "profile.updateError": "Profil güncellenirken hata oluştu",
-    "country.TR": "Türkiye",
-    "country.DE": "Almanya",
-    "country.AT": "Avusturya",
-    "country.BE": "Belçika",
-    "country.FR": "Fransa",
-    "country.IT": "İtalya",
-    "country.ES": "İspanya",
-    "country.NL": "Hollanda",
-    "country.SE": "İsveç",
-    "country.PL": "Polonya",
-    "country.GR": "Yunanistan",
-    "country.PT": "Portekiz",
-    "country.IE": "İrlanda",
-    "country.CH": "İsviçre",
-    "country.GB": "Birleşik Krallık",
-    "country.FI": "Finlandiya",
-    "country.DK": "Danimarka",
-    "country.NO": "Norveç",
-    "country.US": "Amerika Birleşik Devletleri",
-    "country.CA": "Kanada",
-    "country.MX": "Meksika",
-    "country.BR": "Brezilya",
-    "country.AR": "Arjantin",
+  "country.TR": "Türkiye",
+  "country.DE": "Almanya",
+  "country.AT": "Avusturya",
+  "country.BE": "Belçika",
+  "country.FR": "Fransa",
+  "country.IT": "İtalya",
+  "country.ES": "İspanya",
+  "country.NL": "Hollanda",
+  "country.SE": "İsveç",
+  "country.PL": "Polonya",
+  "country.GR": "Yunanistan",
+  "country.PT": "Portekiz",
+  "country.IE": "İrlanda",
+  "country.CH": "İsviçre",
+  "country.GB": "Birleşik Krallık",
+  "country.FI": "Finlandiya",
+  "country.DK": "Danimarka",
+  "country.NO": "Norveç",
+  "country.US": "Amerika Birleşik Devletleri",
+  "country.CA": "Kanada",
+  "country.MX": "Meksika",
+  "country.BR": "Brezilya",
+  "country.AR": "Arjantin",
   "address.country.select": "Ülke Seçin",
   "address.country.search": "Ülke ara...",
   "profile.avatar.select": "Profil Resmi Seç",
@@ -233,5 +234,47 @@
   "profile.avatar.permissionDenied": "Kamera/Galeri izni reddedildi",
   "profile.avatar.pickError": "Resim seçilirken hata oluştu",
   "profile.myAddresses.sub": "Adreslerinizi yönetin",
-  "profile.avatar.invalidType": "Sadece resim dosyaları (jpeg, jpg, png, gif, webp) yüklenebilir"
+  "profile.avatar.invalidType": "Sadece resim dosyaları (jpeg, jpg, png, gif, webp) yüklenebilir",
+  "auth.error.invalidCredentials": "Geçersiz kimlik bilgileri",
+  "cart.item.defaultName": "Ürün",
+  "cart.item.size": "Beden",
+  "cart.item.color": "Renk",
+  "checkout.steps.shipping": "SEVKIYAT",
+  "checkout.steps.payment": "ÖDEME",
+  "checkout.steps.review": "INCELEME",
+  "checkout.title.step1": "Ödeme",
+  "checkout.title.step2": "Ödeme Detayları",
+  "checkout.title.step3": "Siparişi İncele",
+  "checkout.shipping.address": "TESLİMAT ADRESİ",
+  "checkout.shipping.method": "TESLİMAT YÖNTEMİ",
+  "checkout.shipping.addAddress": "Teslimat Adresi Ekle",
+  "checkout.shipping.priority": "Öncelikli Ekspres",
+  "checkout.shipping.standard": "Standart Teslimat",
+  "checkout.shipping.days.priority": "1-2 iş günü",
+  "checkout.shipping.days.standard": "3-5 iş günü",
+  "checkout.footer.orderTotal": "Sipariş Toplamı",
+  "checkout.footer.includingTaxes": "VERGİLER DAHİL",
+  "checkout.button.placeOrder": "Siparişi Onayla",
+  "checkout.payment.creditCard": "KREDİ KARTI",
+  "checkout.payment.cardNumber": "KART NUMARASI",
+  "checkout.payment.expiryDate": "SON KULLANMA TARİHİ",
+  "checkout.payment.cvv": "CVV",
+  "checkout.payment.saveCard": "Gelecekteki alışverişler için kart bilgilerini kaydet",
+  "checkout.payment.otherMethods": "DİĞER YÖNTEMLER",
+  "checkout.payment.paypal.desc": "GÜVENLİ VE KOLAY ÖDEME",
+  "checkout.payment.klarna.desc": "TAKSİTLE ÖDE",
+  "checkout.payment.continueToReview": "İncelemeye Devam Et",
+  "checkout.review.deliverTo": "TESLİMAT ADRESİ",
+  "checkout.review.payment": "ÖDEME",
+  "checkout.review.orderSummary": "SİPARİŞ ÖZETİ",
+  "checkout.review.items": "Ürünler",
+  "checkout.review.estimatedTaxes": "Tahmini Vergiler",
+  "checkout.review.placingOrder": "Sipariş Alınıyor...",
+  "checkout.success.title": "Teşekkür Ederiz!",
+  "checkout.success.subtitle": "Siparişiniz başarıyla oluşturuldu.",
+  "checkout.success.orderNumber": "SİPARİŞ NUMARASI",
+  "checkout.success.deliveryEstimated": "TAHMİNİ TESLİMAT",
+  "checkout.success.confirmationSent": "Onay e-postası {email} adresine gönderildi",
+  "checkout.success.trackOrder": "Siparişi Takip Et",
+  "checkout.success.continueShopping": "Alışverişe Devam Et"
 }
