--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -225,5 +225,21 @@
   "checkout.success.deliveryEstimated": "ESTIMATED DELIVERY",
   "checkout.success.confirmationSent": "Confirmation sent to {email}",
   "checkout.success.trackOrder": "Track Order",
-  "checkout.success.continueShopping": "Continue Shopping"
+  "checkout.success.continueShopping": "Continue Shopping",
+  "account.menu.orders": "My Orders",
+  "orders.title": "My Orders",
+  "orders.empty.title": "No Orders Yet",
+  "orders.empty.subtitle": "You haven't placed any orders yet. Start shopping and they will appear here!",
+  "orders.status.pending": "Pending",
+  "orders.status.paid": "Paid",
+  "orders.status.shipped": "Shipped",
+  "orders.status.delivered": "Delivered",
+  "orders.status.cancelled": "Cancelled",
+  "orders.details.title": "Order Details",
+  "orders.details.summary": "Order Summary",
+  "orders.details.items": "Items Ordered",
+  "orders.details.shipping": "Shipping Information",
+  "orders.details.payment": "Payment Method",
+  "admin.menu.orders": "Manage Orders",
+  "admin.orders.title": "Orders Management"
 }
