feat: add payment methods management, including new screens for listing and adding cards, and i18n support.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -282,6 +282,17 @@
   "checkout.success.trackOrder": "Bestellung verfolgen",
   "checkout.success.continueShopping": "Weiter einkaufen",
   "account.menu.orders": "Meine Bestellungen",
+  "paymentMethods.title": "Zahlungsmethoden",
+  "paymentMethods.add": "Neue Karte hinzufügen",
+  "paymentMethods.empty": "Noch keine Zahlungsmethoden gespeichert.",
+  "paymentMethods.cardNumber": "Kartennummer",
+  "paymentMethods.expiry": "Ablaufdatum",
+  "paymentMethods.cvv": "CVV",
+  "paymentMethods.holderName": "Karteninhaber",
+  "paymentMethods.save": "Karte speichern",
+  "paymentMethods.remove": "Karte entfernen",
+  "paymentMethods.expires": "Läuft ab",
+  "paymentMethods.addParams.success": "Zahlungsmethode erfolgreich hinzugefügt",
   "orders.title": "Meine Bestellungen",
   "orders.empty.title": "Noch keine Bestellungen",
   "orders.empty.subtitle": "Sie haben noch keine Bestellungen aufgegeben. Beginnen Sie mit dem Einkaufen, und sie werden hier erscheinen!",
