--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -282,6 +282,17 @@
   "checkout.success.trackOrder": "Siparişi Takip Et",
   "checkout.success.continueShopping": "Alışverişe Devam Et",
   "account.menu.orders": "Siparişlerim",
+  "paymentMethods.title": "Ödeme Yöntemleri",
+  "paymentMethods.add": "Yeni Kart Ekle",
+  "paymentMethods.empty": "Henüz kayıtlı ödeme yöntemi yok.",
+  "paymentMethods.cardNumber": "Kart Numarası",
+  "paymentMethods.expiry": "Son Kullanma Tarihi",
+  "paymentMethods.cvv": "CVV",
+  "paymentMethods.holderName": "Kart Sahibi",
+  "paymentMethods.save": "Kartı Kaydet",
+  "paymentMethods.remove": "Kartı Sil",
+  "paymentMethods.expires": "Son Kullanma",
+  "paymentMethods.addParams.success": "Ödeme yöntemi başarıyla eklendi",
   "orders.title": "Siparişlerim",
   "orders.empty.title": "Henüz Siparişiniz Yok",
   "orders.empty.subtitle": "Henüz bir sipariş vermediniz. Alışverişe başlayın, siparişleriniz burada görünecektir!",
