--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -228,6 +228,18 @@
   "checkout.success.continueShopping": "Continue Shopping",
   "account.menu.orders": "My Orders",
   "account.orderHistory": "Order History",
+  "account.paymentMethods": "Payment Methods",
+  "paymentMethods.title": "Payment Methods",
+  "paymentMethods.add": "Add New Card",
+  "paymentMethods.empty": "No payment methods saved yet.",
+  "paymentMethods.cardNumber": "Card Number",
+  "paymentMethods.expiry": "Expiry Date",
+  "paymentMethods.cvv": "CVV",
+  "paymentMethods.holderName": "Cardholder Name",
+  "paymentMethods.save": "Save Card",
+  "paymentMethods.remove": "Remove Card",
+  "paymentMethods.expires": "Expires",
+  "paymentMethods.addParams.success": "Payment method added successfully",
   "orders.title": "My Orders",
   "orders.empty.title": "No Orders Yet",
   "orders.empty.subtitle": "You haven't placed any orders yet. Start shopping and they will appear here!",
