feat: Implement unified add/edit payment method screen and selection flow for various payment types.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -283,8 +283,16 @@
   "checkout.success.continueShopping": "Weiter einkaufen",
   "account.menu.orders": "Meine Bestellungen",
   "paymentMethods.title": "Zahlungsmethoden",
-  "paymentMethods.add": "Neue Karte hinzufügen",
+  "paymentMethods.add": "Zahlungsmethode hinzufügen",
   "paymentMethods.empty": "Noch keine Zahlungsmethoden gespeichert.",
+  "paymentMethods.selectTitle": "Zahlungsmethode auswählen",
+  "paymentMethods.error.duplicate": "Diese Zahlungsmethode ist bereits hinzugefügt. Bitte bearbeiten Sie die vorhandene.",
+  "paymentMethods.type.credit": "Kreditkarte",
+  "paymentMethods.type.debit": "Debitkarte",
+  "paymentMethods.type.paypal": "PayPal",
+  "paymentMethods.type.klarna": "Klarna",
+  "paymentMethods.type.apple_pay": "Apple Pay",
+  "paymentMethods.edit": "Zahlungsmethode bearbeiten",
   "paymentMethods.cardNumber": "Kartennummer",
   "paymentMethods.expiry": "Ablaufdatum",
   "paymentMethods.cvv": "CVV",
