--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -231,8 +231,16 @@
   "account.orderHistory": "Order History",
   "account.paymentMethods": "Payment Methods",
   "paymentMethods.title": "Payment Methods",
-  "paymentMethods.add": "Add New Card",
+  "paymentMethods.add": "Add Payment Method",
   "paymentMethods.empty": "No payment methods saved yet.",
+  "paymentMethods.selectTitle": "Select Payment Method",
+  "paymentMethods.error.duplicate": "This payment method is already added. Please edit the existing one.",
+  "paymentMethods.type.credit": "Credit Card",
+  "paymentMethods.type.debit": "Debit Card",
+  "paymentMethods.type.paypal": "PayPal",
+  "paymentMethods.type.klarna": "Klarna",
+  "paymentMethods.type.apple_pay": "Apple Pay",
+  "paymentMethods.edit": "Edit Payment Method",
   "paymentMethods.cardNumber": "Card Number",
   "paymentMethods.expiry": "Expiry Date",
   "paymentMethods.cvv": "CVV",
