--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -283,8 +283,16 @@
   "checkout.success.continueShopping": "Alışverişe Devam Et",
   "account.menu.orders": "Siparişlerim",
   "paymentMethods.title": "Ödeme Yöntemleri",
-  "paymentMethods.add": "Yeni Kart Ekle",
+  "paymentMethods.add": "Ödeme Yöntemi Ekle",
   "paymentMethods.empty": "Henüz kayıtlı ödeme yöntemi yok.",
+  "paymentMethods.selectTitle": "Ödeme Yöntemi Seçin",
+  "paymentMethods.error.duplicate": "Bu ödeme yöntemi zaten ekli. Lütfen mevcut olanı düzenleyin.",
+  "paymentMethods.type.credit": "Kredi Kartı",
+  "paymentMethods.type.debit": "Banka Kartı",
+  "paymentMethods.type.paypal": "PayPal",
+  "paymentMethods.type.klarna": "Klarna",
+  "paymentMethods.type.apple_pay": "Apple Pay",
+  "paymentMethods.edit": "Ödeme Yöntemini Düzenle",
   "paymentMethods.cardNumber": "Kart Numarası",
   "paymentMethods.expiry": "Son Kullanma Tarihi",
   "paymentMethods.cvv": "CVV",
