perf: memoize InnerLayout component to prevent unnecessary re-renders

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -285,6 +285,20 @@
   "paymentMethods.title": "Zahlungsmethoden",
   "paymentMethods.add": "Zahlungsmethode hinzufügen",
   "paymentMethods.empty": "Noch keine Zahlungsmethoden gespeichert.",
+  "paymentMethods.section.primary": "Primäre Methode",
+  "paymentMethods.section.other": "Andere Methoden",
+  "paymentMethods.secure.title": "Sichere Zahlungen",
+  "paymentMethods.secure.description": "Ihre Zahlungsdaten werden verschlüsselt und sicher gespeichert. Wir geben Ihre vollständigen Kartendaten niemals weiter.",
+  "paymentMethods.badge.default": "Standard",
+  "paymentMethods.label.expires": "Läuft ab am {date}",
+  "paymentMethods.sublabel.deviceAccount": "Gerätekonto",
+  "paymentMethods.sublabel.paypalWallet": "PayPal Wallet",
+  "paymentMethods.sublabel.payLater": "In 30 Tagen bezahlen",
+  "paymentMethods.alert.editProvider": "Die Bearbeitungsfunktion für diese Methode würde einen speziellen Anbieter-Flow öffnen.",
+  "validation.card.number": "Ungültige Kartennummer",
+  "validation.card.expiry": "Ungültiges Ablaufdatum (MM/JJ)",
+  "validation.card.cvv": "Ungültige CVV",
+  "validation.card.holderName": "Ungültiger Name des Karteninhabers",
   "paymentMethods.selectTitle": "Zahlungsmethode auswählen",
   "paymentMethods.error.duplicate": "Diese Zahlungsmethode ist bereits hinzugefügt. Bitte bearbeiten Sie die vorhandene.",
   "paymentMethods.type.credit": "Kreditkarte",
