--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -233,6 +233,20 @@
   "paymentMethods.title": "Payment Methods",
   "paymentMethods.add": "Add Payment Method",
   "paymentMethods.empty": "No payment methods saved yet.",
+  "paymentMethods.section.primary": "Primary Method",
+  "paymentMethods.section.other": "Other Methods",
+  "paymentMethods.secure.title": "Secure Payments",
+  "paymentMethods.secure.description": "Your payment details are encrypted and securely stored. We never share your full card info.",
+  "paymentMethods.badge.default": "Default",
+  "paymentMethods.label.expires": "Expires {date}",
+  "paymentMethods.sublabel.deviceAccount": "Device Account",
+  "paymentMethods.sublabel.paypalWallet": "PayPal Wallet",
+  "paymentMethods.sublabel.payLater": "Pay in 30 days",
+  "paymentMethods.alert.editProvider": "Edit functionality for this method would open a specific provider flow.",
+  "validation.card.number": "Invalid card number",
+  "validation.card.expiry": "Invalid expiry date (MM/YY)",
+  "validation.card.cvv": "Invalid CVV",
+  "validation.card.holderName": "Invalid holder name",
   "paymentMethods.selectTitle": "Select Payment Method",
   "paymentMethods.error.duplicate": "This payment method is already added. Please edit the existing one.",
   "paymentMethods.type.credit": "Credit Card",
