--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -285,6 +285,20 @@
   "paymentMethods.title": "Ödeme Yöntemleri",
   "paymentMethods.add": "Ödeme Yöntemi Ekle",
   "paymentMethods.empty": "Henüz kayıtlı ödeme yöntemi yok.",
+  "paymentMethods.section.primary": "Birincil Yöntem",
+  "paymentMethods.section.other": "Diğer Yöntemler",
+  "paymentMethods.secure.title": "Güvenli Ödeme",
+  "paymentMethods.secure.description": "Ödeme bilgileriniz şifrelenir ve güvenli bir şekilde saklanır. Kart bilgilerinizi asla paylaşmayız.",
+  "paymentMethods.badge.default": "Varsayılan",
+  "paymentMethods.label.expires": "Son Kullanma {date}",
+  "paymentMethods.sublabel.deviceAccount": "Cihaz Hesabı",
+  "paymentMethods.sublabel.paypalWallet": "PayPal Cüzdanı",
+  "paymentMethods.sublabel.payLater": "30 gün içinde öde",
+  "paymentMethods.alert.editProvider": "Bu yöntemi düzenlemek için sağlayıcının kendi akışına yönlendirilirsiniz.",
+  "validation.card.number": "Geçersiz kart numarası",
+  "validation.card.expiry": "Geçersiz tarih (AA/YY)",
+  "validation.card.cvv": "Geçersiz CVV",
+  "validation.card.holderName": "Geçersiz kart sahibi adı",
   "paymentMethods.selectTitle": "Ödeme Yöntemi Seçin",
   "paymentMethods.error.duplicate": "Bu ödeme yöntemi zaten ekli. Lütfen mevcut olanı düzenleyin.",
   "paymentMethods.type.credit": "Kredi Kartı",
