feat: Implement admin mobile order details screen with corresponding API endpoint and internationalization support.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -329,5 +329,10 @@
   "orders.details.shipping": "Versandinformationen",
   "orders.details.payment": "Zahlungsmethode",
   "admin.menu.orders": "Bestellungen verwalten",
-  "admin.orders.title": "Bestellverwaltung"
+  "admin.orders.title": "Bestellverwaltung",
+  "admin.orders.details": "Bestelldetails",
+  "admin.orders.customer": "Kundeninformationen",
+  "admin.orders.shipping": "Lieferadresse",
+  "admin.orders.items": "Bestellte Artikel",
+  "admin.orders.payment": "Zahlungsinformationen"
 }
