--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -329,5 +329,24 @@
   "orders.details.shipping": "Teslimat Bilgileri",
   "orders.details.payment": "Ödeme Yöntemi",
   "admin.menu.orders": "Siparişleri Yönet",
-  "admin.orders.title": "Sipariş Yönetimi"
+  "admin.orders.title": "Sipariş Yönetimi",
+  "admin.orders.details": "Sipariş Detayı",
+  "admin.orders.customer": "Müşteri Bilgileri",
+  "admin.orders.shipping": "Teslimat Adresi",
+  "admin.orders.items": "Sipariş Öğeleri",
+  "admin.orders.payment": "Ödeme Detayları",
+  "admin.console.title": "Yönetici Konsolu",
+  "admin.console.overview": "Mağaza Özeti • Canlı",
+  "admin.management": "Yönetim",
+  "admin.products": "Ürünler",
+  "admin.products.total": "TOPLAM",
+  "admin.users": "Kullanıcılar",
+  "admin.users.count": "KULLANICI",
+  "admin.manage": "Yönet",
+  "admin.salesVelocity": "Satış Hızı",
+  "admin.period.week": "HAFTA",
+  "admin.period.month": "AY",
+  "admin.activeInventory": "Aktif Envanter",
+  "admin.seeAll": "Hepsini Gör",
+  "admin.stock": "Stok"
 }
