feat: Implement admin order management screen with functionality to update order status and shipping details.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -330,6 +330,22 @@
   "orders.details.payment": "Zahlungsmethode",
   "admin.menu.orders": "Bestellungen verwalten",
   "admin.orders.title": "Bestellverwaltung",
+  "admin.orders.manage.title": "Bestellung Verwalten",
+  "admin.orders.manage.updateStatus": "Status Aktualisieren",
+  "admin.orders.manage.updateStatusButton": "Status Aktualisieren",
+  "admin.orders.manage.createLabel": "Versandetikett Erstellen",
+  "admin.orders.manage.manual": "Manuell",
+  "admin.orders.manage.api": "API (Demnächst)",
+  "admin.orders.manage.trackingNumber": "Sendungsnummer",
+  "admin.orders.manage.trackingPlaceholder": "Sendungsnummer eingeben",
+  "admin.orders.manage.shippingCost": "Versandkosten",
+  "admin.orders.manage.shippingCarrier": "Versanddienstleister",
+  "admin.orders.manage.shippingDate": "Versanddatum",
+  "admin.orders.manage.createLabelButton": "Etikett Erstellen & Als Versandt Markieren",
+  "admin.orders.manage.updateSuccess": "Bestellung erfolgreich aktualisiert",
+  "admin.orders.manage.updateError": "Bestellung konnte nicht aktualisiert werden",
+  "admin.orders.manage.trackingRequired": "Bitte Sendungsnummer eingeben",
+  "admin.orders.manage.notFound": "Bestellung nicht gefunden",
   "admin.orders.details": "Bestelldetails",
   "admin.orders.customer": "Kundeninformationen",
   "admin.orders.shipping": "Lieferadresse",
