feat: add shipping information display to the admin order details page and update the order list action icon.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -350,5 +350,7 @@
   "admin.orders.customer": "Kundeninformationen",
   "admin.orders.shipping": "Lieferadresse",
   "admin.orders.items": "Bestellte Artikel",
+  "admin.orders.shippingInfo": "Versandinformationen",
+  "admin.orders.shippedDate": "Versanddatum",
   "admin.orders.payment": "Zahlungsinformationen"
 }
